# audio_utils

./: .clang-tidy  .cmake-format.yaml  .gitignore  CMakeLists.txt  CMakePresets.json  fetch_deps.cmake  readme.md  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
cmake/: llvm-toolchain.cmake  msvc-toolchain.cmake  project-options.cmake  project-warnings.cmake
includes/: audio_file_manager.h  audio_manager.h  audio_metrics.h  fft_utils.h
src/: CMakeLists.txt  acoustics.cpp  array_math.cpp  audio_analysis.cpp  audio_file_manager.cpp  audio_manager.cpp  audio_metrics.cpp  audio_test.cpp  fft.cpp  fft_ipp.cpp  fft_utils.cpp  fft_vdsp.cpp  generate_octave_band_filter.py  octave_band_filters_fir.h  ring_buffer.h  ring_buffer.tpp  rtaudio_impl.cpp  rtaudio_impl.h  sndfile_manager_impl.cpp  sndfile_manager_impl.h  test_tone.cpp  test_tone.h
src/includes/audio_utils/: array_math.h  audio_analysis.h  audio_file_manager.h  audio_manager.h  fft.h  fft_utils.h  ring_buffer.h  ring_buffer.tpp
tests/: CMakeLists.txt  audio_perf.cpp  audio_test.cpp  gen_test_data.m  ir_1_echo_density.txt  spectrogram_test.cpp  test.m  test_signal_autocorr.txt  test_signal_cepstrum.txt  test_signal_db_spectrum.txt  test_signal_edc.txt  test_signal_mag_spectrum.txt  test_signal_power_spectrum.txt  test_signal_spectrum_4096.txt  test_signal_spectrum_8192.txt  test_utils.h
